@@ -21,7 +21,7 @@
 #define _tds_sysdep_public_h_
 
 static char rcsid_tds_sysdep_public_h[]=
-	"$Id: tds_sysdep_public.h.in,v 1.2 2002/10/14 00:24:18 castellano Exp $";
+	"$Id: tds_sysdep_public.h.in,v 1.3 2002/10/18 17:35:36 castellano Exp $";
 static void *no_unused_tds_sysdep_public_h_warn[] = {
 	rcsid_tds_sysdep_public_h,
 	no_unused_tds_sysdep_public_h_warn};
@@ -34,9 +34,10 @@ extern "C" {
 ** This is where platform-specific changes need to be made.
 */
 #if defined(WIN32) || defined(_WIN32) || defined(__WIN32__)
+#include <windows.h>
 #define tds_sysdep_int16_type short			/* 16-bit int */
 #define tds_sysdep_int32_type int			/* 32-bit int */
-#define tds_sysdep_int64_type long long			/* 64-bit int */
+#define tds_sysdep_int64_type __int64			/* 64-bit int */
 #define tds_sysdep_real32_type float			/* 32-bit real */
 #define tds_sysdep_real64_type double			/* 64-bit real */
 #endif /* defined(WIN32) || defined(_WIN32) || defined(__WIN32__) */
